<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_bookmark"
        android:orderInCategory="100"
        android:title="@string/action_add_bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove_bookmark"
        android:orderInCategory="200"
        android:title="@string/action_remove_bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="300"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_done"
        android:title="@string/action_done"
        android:visible="false"
        app:showAsAction="always" />
</menu>